[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["David Goodlad <david@goodlad.net>"]
name = "crabdac-firmware"
edition = "2018"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
aligned = "0.4.1"
bbqueue = "0.5.1"
byte-slice-cast = { version = "1.2.1", default-features = false }
bytemuck = "1.11.0"
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
embedded-hal = "1.0.0-alpha.7"
fixed = "1.17.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
ringbuf = { version = "0.3.0-rc.0", default-features = false }
stm32f4xx-hal = { version = "0.13.2", features = ["stm32f411", "rtic", "usb_fs", "i2s", "defmt"] }
synopsys-usb-otg = { version = "0.3.0", features = ["fs"] }
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }

[patch.crates-io]
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", branch = "master" }
# This crate messes with memory.x in the released 0.2 version
stm32_i2s_v12x = { git = "https://github.com/samcrow/stm32_i2s", branch = "master" }
# Include isochronous patch from rust-embedded-community/usb-device#60
usb-device = { git = "https://github.com/dgoodlad/usb-device", branch = "crabdac" }
# Include isochronous support
synopsys-usb-otg = { git = "https://github.com/dgoodlad/synopsys-usb-otg", branch = "isochronous" }

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
